correcting effin overlaps

--- a/tt-style.css
+++ b/tt-style.css
@@ -110,4 +110,5 @@ td{
   white-space: nowrap; !important
   margin: 0px; !important
   height: 20px; !important
+  padding: 0px;
 }
